--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>re</groupId>
     <artifactId>re</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+    </dependency>
 
 </project>
